testsuite/tests/dependent/should_fail/BadTelescope4.stderr

BadTelescope4.hs:9:1: error:
    • These kind and type variables: (a :: k1)
                                     (c :: Proxy b)
                                     (d :: Proxy a)
                                     (x :: SameKind b d)
      are out of dependency order. Perhaps try this ordering:
        k1
        (a :: k1)
        (b :: Proxy a)
        (c :: Proxy b)
        (d :: Proxy a)
        (x :: SameKind b d)
      NB: Implicitly declared kind variables are put first.
    • In the data type declaration for ‘Bad’
